--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
         //便利機能、ユーティリティー
     implementation 'org.apache.commons:commons-lang3:3.19.0'
+
+    // mysqlドライバ
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // MyBatis
+    // https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
+
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
