--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ repositories {
 dependencies {
     //Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
-    //Thymeleaf
+	//Thymeleaf
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:4.0.0'
-
+	// Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
     //便利機能、ユーティリティー
     implementation 'org.apache.commons:commons-lang3:3.19.0'
 
