--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=student.management
-
 spring.datasource.url=jdbc:mysql://localhost:3306/StudentManagement
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# MyBatis???
 mybatis.configuration.map-underscore-to-camel-case=true
-
 mybatis.mapper-locations=classpath:/mapper/*.xml
+mybatis.type-aliases-package=raisetech.student.management.data
+
